--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,8 +1,10 @@
-@import url(reset);
+@import url(reset.css);
 @import url(blobz.css);
 body {
   font-family: "Roboto", sans-serif;
   color: white;
+  width: 100vw;
+  height: 100vh;
 }
 
 .App {
